# amanita

./: (&mut pid_file,  Cargo.toml  LiCENSE  insanity.rs  shell.nix
src/: cli.rs  lib.rs  main.rs  process.rs  schema.rs  state.rs
src/commands/: delete.rs  kill.rs  list.rs  mod.rs  start.rs
